womtool/src/test/resources/validate/wdl_draft3/invalid/extra_input/extra_input.wdl
version draft-3

workflow extra_input {
  input {
    Int x
  }
}
